# task_manager_py

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
main/: admin.py  permissions.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_tag_user_role_task.py  0003_alter_task_assignee_alter_task_author_and_more.py  0004_alter_task_expired_at.py  0005_alter_task_assignee_alter_task_author.py  0006_alter_task_assignee.py  0007_alter_task_author.py  0008_alter_task_expired_at.py
main/models/: tag.py  task.py  user.py
task_manager/: settings.py  urls.py
