[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["dbp"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
psycopg2-binary = "^2.9.5"
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.10.0"
django-fsm = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
